# this is where the kdelnk file will go
#xdg_apps_DATA = gwenview.desktop
xdg_apps_DATA = gwenview_hack.desktop

# file for konqueror integration
konqservicedir = $(kde_datadir)/konqueror/servicemenus
#konqservice_DATA = konqgwenview.desktop
konqservice_DATA = konqgwenview_hack.desktop

EXTRA_DIST = $(xdg_apps_DATA) $(konqservice_DATA)
